objects/Product2.object
<CustomObject>
    <fields>
        <fullName>CPQ_License_Agreement_Name__c</fullName>
        <description>Used to check conditional agreement checkboxes on quote.</description>
        <label>License Agreement Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>PE + IFX</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>SaaS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line_Equals_Family__c</fullName>
        <formula>IF(
 product_line__c = RIGHT( TEXT(Family),LEN(product_line__c)),
&quot;True&quot;,
&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line Equals Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product_Life_Cycle__c</fullName>
        <description>Denotes the serviceability of a product</description>
        <inlineHelpText>Denotes the serviceability of a product</inlineHelpText>
        <label>Product Life Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Limited Support</fullName>
                </value>
                <value>
                    <fullName>End of Life</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_RevLevelAssignment__c</fullName>
        <label>Rev Level Assignment</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Training_Price__c</fullName>
        <description>Field created for BigMachines Implementation as part of Caliper migration.</description>
        <label>Installation Training Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CurrentRevisionDate__c</fullName>
        <label>Current Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Include_in_Download__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Download</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Super_Business_Unit__c</fullName>
        <description>The Super Business Unit Code</description>
        <inlineHelpText>The Super Business Unit Code</inlineHelpText>
        <label>Super Business Unit</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_TransportationGroup__c</fullName>
        <label>Transportation Group</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ConfigurableMaterial__c</fullName>
        <label>Configurable Material</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ExternalMaterialGroup__c</fullName>
        <label>External Material Group</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LaboratoryDesignOffice__c</fullName>
        <label>Laboratory Design Office</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Medical_Classification__c</fullName>
        <description>Medical Classification copied from a Product Classification with Characteristic of PE Medical Device</description>
        <inlineHelpText>Medical Classification copied from a Product Classification with Characteristic of PE Medical Device</inlineHelpText>
        <label>Medical Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_Invivo_updated_Dec_26_2013_VB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify the products updated for the 6 fields related to Big Machines integration</description>
        <label>Products Invivo updated03242014VB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_BatchManagementRequirementIndi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batch Management Requirement Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_DangerousGoodsIndicatorProfile__c</fullName>
        <label>Dangerous Goods Indicator Profile</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Requires_Decontamination_Forms__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that decontamination forms are required forms for the product</description>
        <inlineHelpText>Denotes that decontamination forms are required forms for the product</inlineHelpText>
        <label>Requires Decontamination Forms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_TemperatureConditionsIndicator__c</fullName>
        <label>Temperature Conditions Indicator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Super_Business_Unit_Description__c</fullName>
        <description>The Description of the Super Business Unit</description>
        <inlineHelpText>The Description of the Super Business Unit</inlineHelpText>
        <label>Super Business Unit Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family_Equals_Product_Family_Num__c</fullName>
        <formula>TEXT(Family) = Product_Family_Numbered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family Equals Product Family Num</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>